--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 </div>
                 
                 <div class="qr-code-container">
-                    <img src="https://imgur.com/a/wy6qRwj.png"
+                    <img src="https://imgur.com/a/wy6qRwj"
 
 alt="QR Code" width="200" height="200">
                 </div>
