--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 </div>
                 
                 <div class="qr-code-container">
-                    <img src="qrcode.jpeg"
+                    <img src="https://res.cloudinary.com/dotqsj3ku/image/upload/v1767492791/IMG_3414_uxjh42.jpg"
 
 alt="QR Code" width="200" height="200">
                 </div>
